# private-equity-simulator

./: CHANGELOG_v2.md  CURSOR.md  DEBT_SYSTEM.md  DYNAMIC_MULTIPLES.md  ENHANCEMENTS.md  FUND_NAME_AND_DIFFICULTY.md  INSTALL.md  INTEREST_CAPITALIZATION.md  MANAGER_SYSTEM.md  MANIFEST.in  NARRATIVE_SYSTEM.md  ONE_OPERATION_LIMIT.md  OPERATIONAL_HEALTH.md  OPERATION_CONFIRMATIONS.md  PACKAGE_INFO.md  PERFORMANCE_TIERS.md  QUICKSTART.md  README.md  REPUTATION_AND_QUOTES.md  SECTOR_SPECIFIC_NAMES.md  TAX_SYSTEM.md  TEMPLATE_NARRATIVES.md  TIERED_COMPANIES.md  VALUATION_ANALYSIS.md  config.py  main.py  pyproject.toml  setup.py
data/: __init__.py  manager_narratives.json  names.json  narratives.json  quotes.json  real_sp500.csv  sectors.json
game/: __init__.py  engine.py  events.py  input_handlers.py  menus.py  save_system.py  time_manager.py
models/: __init__.py  company.py  deal.py  finance.py  manager.py  market.py  player.py
simulation/: __init__.py  dcf.py  manager_system.py  narratives.py  portfolio_ops.py  procedural_gen.py  stochastic.py
tests/: __init__.py  test_company.py  test_dcf.py  test_game_flow.py  test_market.py
ui/: __init__.py  screens.py  table_views.py
