[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pe-sim"
version = "1.0.0"
description = "Private Equity Simulator - A terminal-based business simulation game"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PE Sim Team"}
]
keywords = ["game", "simulation", "private-equity", "business", "terminal", "text-adventure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Simulation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pe-sim"
Documentation = "https://github.com/yourusername/pe-sim/blob/main/README.md"
Repository = "https://github.com/yourusername/pe-sim"
Issues = "https://github.com/yourusername/pe-sim/issues"

[project.scripts]
pe-sim = "pe_sim:main"

[tool.setuptools]
py-modules = ["pe_sim", "config"]
packages = ["game", "models", "simulation", "ui", "data"]
include-package-data = true

[tool.setuptools.package-data]
"data" = ["*.json", "*.csv"]
